<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textWriteColor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/background_with_shadow">

        <TextView
            android:id="@+id/tv_select_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/textBlackColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:text="@string/all_photos"
            android:textColor="@color/albumColor"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_album_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tv_album_name"
            android:src="@drawable/svg_arrow_down_yellow" />

        <Button
            android:id="@+id/bt_select_ok"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_unclickable"
            android:minWidth="70dp"
            android:text="@string/ok"
            android:textColor="@color/textSecondColor"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photo_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/dividerColor"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_preview_image"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/button_unclickable"
                    android:text="@string/preview"
                    android:textColor="@color/textSecondColor"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/bt_select_original_image"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/button_unclickable"
                    android:drawableStart="@drawable/svg_choose_original_image_default"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:minWidth="65dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/full_image"
                    android:textColor="@color/textBlackColor"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/v_alpha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="invisible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_folder_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>